updated the routes and functionality
